# infra-event-notifier

./: .craft.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml
infra_event_notifier/: datadog_notifier.py  jira_notifier.py  main.py  notifier.py  slack_notifier.py
infra_event_notifier/backends/: datadog.py  jira.py  slack.py
infra_event_notifier/cli/: command.py  datadog.py  terragrunt.py
scripts/: bump-version.sh
tests/: notifier.py  test_main.py
tests/backends/: test_datadog.py  test_jira.py  test_slack.py
tests/cli/: test_datadog.py  test_terragrunt.py
topicctl_parser/: parser.py  utils.py
topicctl_parser/notifications/: datadog.py
