[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topicctl_parser"
version = "0.0.1"
description = "Parses topicctl output and sends notifications"
authors = [
  { name = "Ben McKerry", email = "ben.mckerry@sentry.io" },
]
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/getsentry/topicctl-parser"
Issues = "https://github.com/getsentry/topicctl-parser/issues"
